Fixed a few styling bugs. The size of the image breaks the image clipping to circle. Need to clip the image depending on size.

--- a/src/main/resources/static/css/whiteboard.css
+++ b/src/main/resources/static/css/whiteboard.css
@@ -429,6 +429,7 @@ input[type="range"]::-moz-range-track {
     background-color:white;
     margin:0 5px;
     height:35px;
+    width:35px;
 }
 
 .whiteboard-dropdowns .player-card span{
